[bug] full-calendar date display on small devices

--- a/app/assets/stylesheets/app.responsive.scss
+++ b/app/assets/stylesheets/app.responsive.scss
@@ -19,6 +19,10 @@
 	}
   }
 
+  // fix for full-calendar display on small devices
+  .fc-toolbar {
+    margin-bottom: 2.5em !important;
+  }
 
 }
 
